--- a/scene/one/elephant-conservation-angola/index.html
+++ b/scene/one/elephant-conservation-angola/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; frame-src www.youtube.com; img-src img.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; frame-src www.youtube.com; img-src inc.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -17,7 +17,7 @@
     html { background-color: #222; }
   </style>
 
-  <link rel="preconnect" href="https://animathabitat.com" />
+  <link rel="preconnect" href="https://inc.animathabitat.org" />
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
@@ -40,7 +40,7 @@
     <article>
 
       <div class="clear">
-        <img alt="" src="https://img.animathabitat.org/01/photo/~national-geographic/national-geographic-documentary-films.into-the-okavango.9.jpg" />
+        <img alt="" src="https://inc.animathabitat.org/img/01/photo/~national-geographic/national-geographic-documentary-films.into-the-okavango.9.jpg" />
         <p class="text-right gutter-side">&ldquo;A group of elephants in the Okavango Delta wades through water&hellip;&rdquo; Botswana &copy; Cory Richards [<a href="../../../url/-com/nationalgeographic-into-the-okavango/" target="_blank" title="National Geographic Documentary Films / Into the Okavango">films.nationalgeographic.com</a>]</p>
 
       </div>
@@ -107,7 +107,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://img.animathabitat.org/01/photo/~national-geographic/national-geographic-documentary-films.into-the-okavango.3.jpg" />
+        <img alt="" src="https://inc.animathabitat.org/img/01/photo/~national-geographic/national-geographic-documentary-films.into-the-okavango.3.jpg" />
         <p class="text-right gutter-side">&ldquo;A raging inferno swept across the floodplains opposite the overnight campsite on the Cuito River.&rdquo; Angola &copy; James Kydd [<a href="../../../url/-com/nationalgeographic-into-the-okavango/" target="_blank" title="National Geographic Documentary Films / Into the Okavango">films.nationalgeographic.com</a>]</p>
 
       </div>
