--- a/scene/one/elephant-conservation-kenya/index.html
+++ b/scene/one/elephant-conservation-kenya/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src img.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src inc.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -17,7 +17,7 @@
     html { background-color: #222; }
   </style>
 
-  <link rel="preconnect" href="https://animathabitat.com" />
+  <link rel="preconnect" href="https://inc.animathabitat.org" />
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
@@ -56,7 +56,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://img.animathabitat.org/01/photo/2016.kenya.ivory-pile.jpg" />
+        <img alt="" src="https://inc.animathabitat.org/img/01/photo/2016.kenya.ivory-pile.jpg" />
         <p class="text-right gutter-side">&lsquo;KWS ranger stands guard in Nairobi National Park&rsquo;, 2016 &copy; AP / Ben Curtis [<a href="../../../url/www/bencurtis/" rel="noopener" target="_blank" title="Ben Curtis">bencurtis.org</a>]</p>
 
       </div>
@@ -66,7 +66,7 @@
 
       </div>
 
-      <img alt="" src="https://img.animathabitat.org/01/photo/2016.kenya.ivory-burn.jpg" />
+      <img alt="" src="https://inc.animathabitat.org/img/01/photo/2016.kenya.ivory-burn.jpg" />
       <p class="text-right gutter-side">&lsquo;Ivory set on fire in Nairobi National Park&rsquo;, Kenya, 2016 &copy; AP / Ben Curtis [<a href="../../../url/www/bencurtis/" rel="noopener" target="_blank" title="Ben Curtis">bencurtis.org</a>]</p>
 
       <div>
@@ -167,7 +167,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://img.animathabitat.org/01/logo/hands-off.png" />
+        <img alt="" src="https://inc.animathabitat.org/img/01/logo/hands-off.png" />
         <p class="gutter-side text-right">Hands Off Our Elephants &copy; Wildlife Direct [<a href="../../../url/-org/wildlifedirect-hands-off-our-elephants/" rel="noopener" target="_blank" title="Wildlife Direct / Hands Off Our Elephants">wildlifedirect.org</a>, recolored]</p>
 
       </div>
