--- a/scene/one/making-of-ella/index.html
+++ b/scene/one/making-of-ella/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src img.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src inc.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -17,7 +17,7 @@
     html { background-color: #222; }
   </style>
 
-  <link rel="preconnect" href="https://animathabitat.com" />
+  <link rel="preconnect" href="https://inc.animathabitat.org" />
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
@@ -39,7 +39,7 @@
   <section>
     <article>
 
-      <img alt="Okavango Delta, Botswana [Landsat 8 Map] (2017) &copy; Descartes Labs" src="https://img.animathabitat.org/01/geo/africa-okavango.jpg" />
+      <img alt="Okavango Delta, Botswana [Landsat 8 Map] (2017) &copy; Descartes Labs" src="https://inc.animathabitat.org/img/01/geo/africa-okavango.jpg" />
       <p class="text-right gutter-side">Okavango Delta, Botswana. <i>Landsat 8 Map</i> &copy; Descartes Labs</p>
 
       <div>
