--- a/scene/one/reference-art/index.html
+++ b/scene/one/reference-art/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src img.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src inc.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -17,7 +17,7 @@
     html { background-color: #222; }
   </style>
 
-  <link rel="preconnect" href="https://animathabitat.com" />
+  <link rel="preconnect" href="https://inc.animathabitat.org" />
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
@@ -47,7 +47,7 @@
 
       </div>
 
-      <img alt="" src="https://img.animathabitat.org/01/art/cave.chauvet.jpg" />
+      <img alt="" src="https://inc.animathabitat.org/img/01/art/cave.chauvet.jpg" />
       <p class="text-right gutter-side">Chauvet-Pont-d’Arc Cave, 30,000-32,000 BP [<a title="UNESCO / Chauvet-Pont-d'Arc" href="../../../url/unesco/1426/" target="_blank" rel="noopener">unesco.org</a>]</p>
 
       <div class="clear-top">
@@ -58,12 +58,12 @@
 
       <div class="clear diptych">
         <div class="clear">
-          <img alt="Lions, Chauvet-Pont-d'Arc" src="https://img.animathabitat.org/01/art/cave.chauvet-lions.jpg" />
+          <img alt="Lions, Chauvet-Pont-d'Arc" src="https://inc.animathabitat.org/img/01/art/cave.chauvet-lions.jpg" />
 
         </div>
 
         <div class="clear">
-          <img alt="Horses, Chauvet-Pont-d'Arc" src="https://img.animathabitat.org/01/art/cave.chauvet-horses.jpg" />
+          <img alt="Horses, Chauvet-Pont-d'Arc" src="https://inc.animathabitat.org/img/01/art/cave.chauvet-horses.jpg" />
 
         </div>
 
@@ -80,7 +80,7 @@
 
       </div>
 
-      <img alt="" src="https://img.animathabitat.org/01/art/cave.phillipps-white-elephant.jpg" />
+      <img alt="" src="https://inc.animathabitat.org/img/01/art/cave.phillipps-white-elephant.jpg" />
       <p class="text-right gutter-side">Phillipp’s Cave, Namibia, 3,200-3,500 BCE [<a title="Info Namibia / Phillipp's Cave" href="../../../url/www/info-namibia-phillipps-cave/" target="_blank" rel="noopener">info-namibia.com</a>]</p>
 
       <div>
@@ -91,7 +91,7 @@
       </div>
 
       <div class="clear-bottom clear-top">
-        <img alt="" src="https://img.animathabitat.org/01/art/trajan-column.rome.2015-09.220.jpg" />
+        <img alt="" src="https://inc.animathabitat.org/img/01/art/trajan-column.rome.2015-09.220.jpg" />
         <p class="text-right">Trajan's Column, Rome [<a title="Wikipedia / Trajan's Column" href="../../../url/wiki/trajans-column/" target="_blank" rel="noopener">wikipedia.org</a>]</p>
       </div>
 
@@ -113,7 +113,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://img.animathabitat.org/01/art/robert-bateman-an-artist-in-nature.jpg" />
+        <img alt="" src="https://inc.animathabitat.org/img/01/art/robert-bateman-an-artist-in-nature.jpg" />
         <p class="text-right gutter-side"><i>An Artist in Nature</i> (1990) &copy; Robert Bateman [<a title="Robert Bateman" href="../../../url/-org/batemancentre-robert-bateman/" target="_blank" rel="noopener">batemancentre.org</a>]</p>
 
       </div>
@@ -140,7 +140,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://img.animathabitat.org/01/art/brandt.across-the-ravaged-land.jpg" />
+        <img alt="" src="https://inc.animathabitat.org/img/01/art/brandt.across-the-ravaged-land.jpg" />
         <p class="text-right gutter-side"><i>Across the Ravaged Land</i> (2013) &copy; Nick Brandt [<a title="Nick Brandt" href="../../../url/-com/nickbrandt/" target="_blank" rel="noopener">nickbrandt.com</a>]</p>
       </div>
 
@@ -149,7 +149,7 @@
 
       </div>
 
-      <img alt="" src="https://img.animathabitat.org/01/photo/~british-broadcasting-corporation/bbc.africa.2.savannah-elephants.jpg" />
+      <img alt="" src="https://inc.animathabitat.org/img/01/photo/~british-broadcasting-corporation/bbc.africa.2.savannah-elephants.jpg" />
       <p class="text-right gutter-side"><i>Africa</i> (2013), e/2: &ldquo;Savannah&rdquo; &copy; BBC Studios Natural History Unit [<a title="BBC Studios Natural History Unit" href="../../../url/-com/bbcstudios-the-natural-history-unit/" target="_blank" rel="noopener">bbcstudios.com</a>]</p>
 
       <div>
