--- a/scene/two/the-beginning-of-chapter-two/index.html
+++ b/scene/two/the-beginning-of-chapter-two/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src img.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src inc.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -17,7 +17,7 @@
     html { background-color: #111; }
   </style>
 
-  <link rel="preconnect" href="https://animathabitat.com" />
+  <link rel="preconnect" href="https://inc.animathabitat.org" />
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
@@ -57,7 +57,7 @@
 
       </div>
 
-      <img alt="" src="https://img.animathabitat.org/02/type/paratype.rodchenko.002.png" />
+      <img alt="" src="https://inc.animathabitat.org/img/02/type/paratype.rodchenko.002.png" />
       <p class="text-right gutter-side">Rochenko type specimen [<a href="../../../url/com/paratype-rodchenko/" rel="noopener" target="_blank" title="ParaType / Fonts / Rodchenko">paratype.com</a>, edited and recolored]</p>
 
       <div class="clear-top">
@@ -70,7 +70,7 @@
 
       </div>
 
-      <img alt="" src="https://img.animathabitat.org/02/type/paratype.rodchenko.001.png" />
+      <img alt="" src="https://inc.animathabitat.org/img/02/type/paratype.rodchenko.001.png" />
       <p class="text-right gutter-side">Rochenko type specimen [<a href="../../../url/com/paratype-rodchenko/" rel="noopener" target="_blank" title="ParaType / Fonts / Rodchenko">paratype.com</a>, recolored]</p>
 
       <div>
