--- a/scene/zero/northern-white-rhinoceros/index.html
+++ b/scene/zero/northern-white-rhinoceros/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; frame-src https://player.vimeo.com; img-src img.animathabitat.org 'self'; script-src 'unsafe-inline'; style-src fonts.googleapis.com 'self';" />
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; frame-src https://player.vimeo.com; img-src inc.animathabitat.org 'self'; script-src 'unsafe-inline'; style-src fonts.googleapis.com 'self';" />
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -17,7 +17,7 @@
     html { background-color: #333; }
   </style>
 
-  <link rel="preconnect" href="https://animathabitat.com" />
+  <link rel="preconnect" href="https://inc.animathabitat.org" />
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
@@ -62,7 +62,7 @@
       </div>
 
       <div class="clear">
-        <img alt="A wildlife ranger comforts Sudan moments before he passed away, Ol Pejeta Conservancy, Kenya (March 2018) &copy; Ami Vitale" src="https://img.animathabitat.org/00/photo/~ami-vitale/vitale.2018.sudan-at-ol-pejeta-conservancy.jpg" />
+        <img alt="A wildlife ranger comforts Sudan moments before he passed away, Ol Pejeta Conservancy, Kenya (March 2018) &copy; Ami Vitale" src="https://inc.animathabitat.org/img/00/photo/~ami-vitale/vitale.2018.sudan-at-ol-pejeta-conservancy.jpg" />
         <p class="text-right gutter-side"><i>A wildlife ranger comforts Sudan moments before he passed away</i>, Ol Pejeta Conservancy, Kenya (March&nbsp;2018) &copy; Ami Vitale [<a href="../../../url/-com/amivitale-goodbye-sudan/" rel="noopener" target="_blank" title="Ami Vitale / The Last Goodbye">amivitale.com</a>]</p>
 
       </div>
@@ -91,7 +91,7 @@
       </div>
 
       <div class="clear">
-        <img alt="Fatu and Najin graze, Ol Pejeta Conservancy, Kenya (March 2018) &copy; Ami Vitale" src="https://img.animathabitat.org/00/photo/~ami-vitale/vitale.2018.fatu-and-najin-graze.jpg" />
+        <img alt="Fatu and Najin graze, Ol Pejeta Conservancy, Kenya (March 2018) &copy; Ami Vitale" src="https://inc.animathabitat.org/img/00/photo/~ami-vitale/vitale.2018.fatu-and-najin-graze.jpg" />
         <p class="gutter-side text-right"><i>Fatu and Najin graze</i>, Ol Pejeta Conservancy, Kenya (March 2018) &copy; Ami Vitale [<a href="../../../url/-com/amivitale-goodbye-sudan/" rel="noopener" target="_blank" title="Ami Vitale / The Last Goodbye">amivitale.com</a>]</p>
 
       </div>
