--- a/scene/one/book-of-ella-4/index.html
+++ b/scene/one/book-of-ella-4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src dane.periwinkle.blue 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -63,7 +63,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://periwinkle.blue/dane/inc/img/~/pixar/the-blue-umbrella.2013.jpg" />
+        <img alt="" src="https://dane.periwinkle.blue/inc/img/~/pixar/the-blue-umbrella.2013.jpg" />
         <p class="text-right gutter-side"><i>The Blue Umbrella</i> (2013). &copy; PIXAR [<a href="../../../url/www/pixar-the-blue-umbrella/" title="The Blue Umbrella (2013) &copy Pixar" target="_blank" rel="noopener">pixar.com</a>]</p>
 
       </div>
@@ -82,7 +82,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://periwinkle.blue/dane/inc/img/~/pixar/the-blue-umbrella.2013.colorscript.jpg" />
+        <img alt="" src="https://dane.periwinkle.blue/inc/img/~/pixar/the-blue-umbrella.2013.colorscript.jpg" />
         <p class="text-right gutter-side"><i>The Blue Umbrella</i> (2013), colorscript. &copy; PIXAR [<a href="../../../url/www/pixar-the-blue-umbrella/" title="The Blue Umbrella colorscript (2013) &copy Pixar" target="_blank" rel="noopener">pixar.com</a>]</p>
 
       </div>
