--- a/scene/two/index.html
+++ b/scene/two/index.html
@@ -34,11 +34,11 @@
       <li class="crumb logo color"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Two) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.two.svg"/></a></li>
       <li class="crumb scene color"><a><i>White Tiger</i></a></li>
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
-      <li class="right thin" id="currency"><a class="title" onclick="toggle_currency();">
+      <li class="right thin" id="currency"><a class="title" onclick="toggle_currency();"><font class="clear">
         <font class="paypal-ca"><b class="overscore">CA</b>&nbsp;&#92;&nbsp;US</font>
         <font class="paypal-us">CA&nbsp;&#92;&nbsp;<b class="overscore">US</b></font>
         &nbsp;<font class="currency-symbol">&#36;</font>
-      </a></li>
+      </font></a></li>
     </ul>
   </nav>
 
