--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -33,11 +33,11 @@
       <li class="crumb logo color"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb scene color"><a><i>White Elephant</i></a></li>
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
-      <li class="right thin" id="currency"><a class="title" onclick="toggle_currency();" title="Animat Habitat in Canada, United States of America."><font class="clear">
+      <li class="right thin" id="currency"><a class="clear title" onclick="toggle_currency();" title="Animat Habitat in Canada, United States of America.">
         <font class="paypal-ca"><b class="overscore">CA</b>&nbsp;&#92;&nbsp;US</font>
         <font class="paypal-us">CA&nbsp;&#92;&nbsp;<b class="overscore">US</b></font>
         &nbsp;<font class="currency-symbol">&#36;</font>
-      </font></a></li>
+      </a></li>
     </ul>
   </nav>
 
