--- a/boutique/medium/digital-numerique/last-of-the-big-tuskers/index.html
+++ b/boutique/medium/digital-numerique/last-of-the-big-tuskers/index.html
@@ -49,9 +49,9 @@
 
   <div class="clear preview" id="preview-isilo">
     <a onclick="preview_isilo();">
-      <div class="quote">
+      <div class="text-center">
         <img alt="Last of the Big Tuskers &ndash; Isilo [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.1440-864.jpg" />
-        <p class="text-right gutter-side"><i>Isilo</i> &ndash; Tembe Elephant Park, South Africa</p>
+        <p class="linebreak"><i>Isilo</i> &ndash; Tembe Elephant Park, South Africa</p>
 
       </div>
     </a>
@@ -59,9 +59,9 @@
 
   <div class="clear preview" id="preview-kamboyo">
     <a onclick="preview_kamboyo();">
-      <div class="quote">
+      <div class="text-center">
         <img alt="Last of the Big Tuskers &ndash; Kamboyo [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.kamboyo.c.1440-864.jpg" />
-        <p class="text-right gutter-side"><i>Kamboyo</i> &ndash; Tsavo Conservation Area, Kenya</p>
+        <p class="linebreak"><i>Kamboyo</i> &ndash; Tsavo Conservation Area, Kenya</p>
 
       </div>
     </a>
@@ -69,9 +69,9 @@
 
   <div class="clear preview" id="preview-masthulele">
     <a onclick="preview_masthulele();">
-      <div class="quote">
+      <div class="text-center">
         <img alt="Last of the Big Tuskers &ndash; Masthulele [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.masthulele.c.1440-864.jpg" />
-        <p class="text-right gutter-side"><i>Masthulele</i> &ndash; Kruger National Park, South Africa</p>
+        <p class="linebreak"><i>Masthulele</i> &ndash; Kruger National Park, South Africa</p>
 
       </div>
     </a>
@@ -79,9 +79,9 @@
 
   <div class="clear preview" id="preview-one-ton">
     <a onclick="preview_one_ton();">
-      <div class="quote">
+      <div class="text-center">
         <img alt="Last of the Big Tuskers &ndash; One Ton [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.c.1440-864.jpg" />
-        <p class="text-right gutter-side"><i>One Ton</i> &ndash; Chyulu Hills National Park, Kenya</p>
+        <p class="linebreak"><i>One Ton</i> &ndash; Chyulu Hills National Park, Kenya</p>
 
       </div>
     </a>
@@ -89,9 +89,9 @@
 
   <div class="clear preview" id="preview-satao">
     <a onclick="preview_satao();">
-      <div class="quote">
+      <div class="text-center">
         <img alt="Last of the Big Tuskers &ndash; Satao [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.1440-864.jpg" />
-        <p class="text-right gutter-side"><i>Satao</i> &ndash; Tsavo East National Park, Kenya</p>
+        <p class="linebreak"><i>Satao</i> &ndash; Tsavo East National Park, Kenya</p>
 
       </div>
     </a>
@@ -99,9 +99,9 @@
 
   <div class="clear preview" id="preview-tim">
     <a onclick="preview_tim();">
-      <div class="quote">
+      <div class="text-center">
         <img alt="Last of the Big Tuskers &ndash; Tim [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.1440-864.jpg" />
-        <p class="text-right gutter-side"><i>Tim</i> &ndash; Amboseli National Park, Kenya</p>
+        <p class="linebreak"><i>Tim</i> &ndash; Amboseli National Park, Kenya</p>
 
       </div>
     </a>
@@ -109,9 +109,9 @@
 
   <div class="clear preview" id="preview-craig">
     <a onclick="preview_craig();">
-      <div class="quote">
+      <div class="text-center">
         <img alt="Last of the Big Tuskers &ndash; Craig [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.1440-864.jpg" />
-        <p class="text-right gutter-side"><i>Craig</i> &ndash; Amboseli National Park, Kenya</p>
+        <p class="linebreak"><i>Craig</i> &ndash; Amboseli National Park, Kenya</p>
 
       </div>
     </a>
@@ -146,7 +146,7 @@
 
   </section>
 
-  <div class="clear color">
+  <div class="clear-alt color">
 
     <section class="product single" id="product-0110">
 
