--- a/boutique/medium/giclee/isilo/index.html
+++ b/boutique/medium/giclee/isilo/index.html
@@ -49,8 +49,9 @@
   <div class="clear preview" id="preview">
 
       <a onclick="toggle_preview();">
-        <div class="quote">
+        <div class="text-center">
           <img alt="Last of the Big Tuskers (2018) &ndash; Isilo [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.1440-864.jpg" />
+          <p class="linebreak"><i>Isilo</i> &ndash; Tembe Elephant Park, South Africa (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
         </div>
       </a>
@@ -62,14 +63,13 @@
       <div class="clear-bottom">
         <a onclick="toggle_preview();">
           <img alt="Last of the Big Tuskers (2018) &ndash; Isilo [thumbnail]" class="matte matte-fold" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" />
-          <p class="gutter-side text-right"><i>Isilo</i> &ndash; Tembe Elephant Park, South Africa (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
         </a>
       </div>
     </section>
   </div>
 
-  <div class="clear color">
+  <div class="clear-alt color">
 
     <section class="product single" id="product-0111">
 
