--- a/boutique/medium/giclee/satao/index.html
+++ b/boutique/medium/giclee/satao/index.html
@@ -50,8 +50,9 @@
   <div class="clear preview" id="preview">
 
       <a onclick="toggle_preview();">
-        <div class="quote">
+        <div class="tect-center">
           <img alt="Last of the Big Tuskers (2018) &ndash; Satao [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.1440-864.jpg" />
+          <p class="linebreak"><i>Satao</i> &ndash; Tsavo East National Park, Kenya (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
         </div>
       </a>
@@ -63,14 +64,13 @@
       <div class="clear-bottom">
         <a onclick="toggle_preview();">
           <img alt="Last of the Big Tuskers (2018) &ndash; Satao [thumbnail]" class="matte matte-fold" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.300-180.jpg" />
-          <p class="gutter-side text-right"><i>Satao</i> &ndash; Tsavo East National Park, Kenya (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
         </a>
       </div>
     </section>
   </div>
 
-  <div class="clear color">
+  <div class="clear-alt color">
 
     <section class="product single" id="product-0115">
 
