--- a/boutique/medium/giclee/tim-and-craig/index.html
+++ b/boutique/medium/giclee/tim-and-craig/index.html
@@ -49,9 +49,9 @@
 
   <div class="clear preview" id="preview-tim">
     <a onclick="preview_tim();">
-      <div class="quote">
+      <div class="text-center">
         <img alt="Last of the Big Tuskers &ndash; Tim [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.864.jpg" />
-        <p class="text-right gutter-side"><i>Tim</i> &ndash; Amboseli National Park, Kenya</p>
+        <p class="linebreak"><i>Tim</i> &ndash; Amboseli National Park, Kenya (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
       </div>
     </a>
@@ -59,9 +59,9 @@
 
   <div class="clear preview" id="preview-craig">
     <a onclick="preview_craig();">
-      <div class="quote">
+      <div class="text-center">
         <img alt="Last of the Big Tuskers &ndash; Craig [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.864.jpg" />
-        <p class="text-right gutter-side"><i>Craig</i> &ndash; Amboseli National Park, Kenya</p>
+        <p class="linebreak"><i>Craig</i> &ndash; Amboseli National Park, Kenya (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
       </div>
     </a>
@@ -80,12 +80,11 @@
         </div>
 
       </div>
-      <p class="gutter-side text-right"><i>Tim</i>, <i>Craig</i> &ndash; Amboseli National Park, Kenya (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
     </section>
   </div>
 
-  <div class="clear color">
+  <div class="clear-alt color">
 
     <section class="product single" id="product-0116">
 
