--- a/boutique/medium/giclee/satao/index.html
+++ b/boutique/medium/giclee/satao/index.html
@@ -50,7 +50,7 @@
   <div class="clear preview" id="preview">
 
       <a onclick="toggle_preview();">
-        <div class="tect-center">
+        <div class="text-center">
           <img alt="Last of the Big Tuskers (2018) &ndash; Satao [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.1440-864.jpg" />
           <p class="linebreak"><i>Satao</i> &ndash; Tsavo East National Park, Kenya (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
