--- a/boutique/medium/digital-numerique/last-of-the-big-tuskers/index.html
+++ b/boutique/medium/digital-numerique/last-of-the-big-tuskers/index.html
@@ -51,7 +51,7 @@
     <a onclick="preview_isilo();">
       <div class="text-center">
         <img alt="Last of the Big Tuskers &ndash; Isilo [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.1440-864.jpg" />
-        <p class="linebreak"><i>Isilo</i> &ndash; Tembe Elephant Park, South Africa</p>
+        <p class="linebreak"><i>Isilo</i> &ndash; Tembe Elephant Park, South Africa (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
       </div>
     </a>
@@ -61,7 +61,7 @@
     <a onclick="preview_kamboyo();">
       <div class="text-center">
         <img alt="Last of the Big Tuskers &ndash; Kamboyo [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.kamboyo.c.1440-864.jpg" />
-        <p class="linebreak"><i>Kamboyo</i> &ndash; Tsavo Conservation Area, Kenya</p>
+        <p class="linebreak"><i>Kamboyo</i> &ndash; Tsavo Conservation Area, Kenya (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
       </div>
     </a>
@@ -71,7 +71,7 @@
     <a onclick="preview_masthulele();">
       <div class="text-center">
         <img alt="Last of the Big Tuskers &ndash; Masthulele [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.masthulele.c.1440-864.jpg" />
-        <p class="linebreak"><i>Masthulele</i> &ndash; Kruger National Park, South Africa</p>
+        <p class="linebreak"><i>Masthulele</i> &ndash; Kruger National Park, South Africa (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
       </div>
     </a>
@@ -81,7 +81,7 @@
     <a onclick="preview_one_ton();">
       <div class="text-center">
         <img alt="Last of the Big Tuskers &ndash; One Ton [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.c.1440-864.jpg" />
-        <p class="linebreak"><i>One Ton</i> &ndash; Chyulu Hills National Park, Kenya</p>
+        <p class="linebreak"><i>One Ton</i> &ndash; Chyulu Hills National Park, Kenya (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
       </div>
     </a>
@@ -91,7 +91,7 @@
     <a onclick="preview_satao();">
       <div class="text-center">
         <img alt="Last of the Big Tuskers &ndash; Satao [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.1440-864.jpg" />
-        <p class="linebreak"><i>Satao</i> &ndash; Tsavo East National Park, Kenya</p>
+        <p class="linebreak"><i>Satao</i> &ndash; Tsavo East National Park, Kenya (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
       </div>
     </a>
@@ -101,7 +101,7 @@
     <a onclick="preview_tim();">
       <div class="text-center">
         <img alt="Last of the Big Tuskers &ndash; Tim [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.1440-864.jpg" />
-        <p class="linebreak"><i>Tim</i> &ndash; Amboseli National Park, Kenya</p>
+        <p class="linebreak"><i>Tim</i> &ndash; Amboseli National Park, Kenya (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
       </div>
     </a>
@@ -111,7 +111,7 @@
     <a onclick="preview_craig();">
       <div class="text-center">
         <img alt="Last of the Big Tuskers &ndash; Craig [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.1440-864.jpg" />
-        <p class="linebreak"><i>Craig</i> &ndash; Amboseli National Park, Kenya</p>
+        <p class="linebreak"><i>Craig</i> &ndash; Amboseli National Park, Kenya (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
       </div>
     </a>
